--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB_URI="mongodb+srv://kunalahujaug22:Q3cbRknuU8N1oUP0@cluster0.ospb9.mongodb.net/email-tracking?retryWrites=true&w=majority&appName=Cluster0"
 PASSWORD = hfh748
-
+SMTP_EMAIL=tripathisameer415@gmail.com
+SMTP_PASSWORD=aeio xddh yiaa xocz
